--- a/styles/syntax-variables.less
+++ b/styles/syntax-variables.less
@@ -9,8 +9,8 @@
 
 // Guide colors
 @syntax-wrap-guide-color: rgba(255, 255, 255, .05);
-@syntax-indent-guide-color: @gray;
-@syntax-invisible-character-color: @gray;
+@syntax-indent-guide-color: rgba(255, 255, 255, .2);
+@syntax-invisible-character-color: rgba(255, 255, 255, .2);
 
 // For find and replace markers
 @syntax-result-marker-color: rgba(255, 255, 255, .3);
